# GatewaySDK

./: .gitignore  README.md
Gateway/: CMakeLists.txt  prj.conf
Gateway/BG95_Custom/: CMakeLists.txt  nrf52840dk_nrf52840.overlay
Gateway/BG95_Custom/boards/: nrf52840dk_nrf52840.overlay
Gateway/BG95_Custom/src/: at-commands-libary.h  at-commands.c  flash-drv.c  httpStringBuilder.h  main.c  modem-drv.c  network-api.c
Gateway/MG100/: CMakeLists.txt
Gateway/MG100/boards/: mg100.overlay
Gateway/MG100/src/: main.c  modem-drv.c  network-api.c
Gateway/MG100/src/dev-if/: dev-if.c
Gateway/MG100/src/osal/: osal.c  osal_defines.h
Gateway/src/: at-commands.c  at-commands.h  ca_certificate.h  flash-drv.c  flash-drv.h  httpStringBuilder.c  httpStringBuilder.h  main.c  modem-drv.c  modem-drv.h  network-api.c  wiliot_till_june_2023.der.inc
Gateway/src/MQTT/: MQTTConnect.h
Gateway/src/dev-if/: dev-if.c
Gateway/src/osal/: osal.c  osal_defines.h  osal_impl.h
sdk/: README.md
sdk/Interface/: dev-if.h  network-api.h  osal.h  sdk_common.h
sdk/sdkInc/: downLink.h  logger.h  mqttTopics.h  networkManager.h  sdkConfigurations.h  sdkConfigurationsImplementation.h  sdkUtils.h  serviceDiscovery.h  upLink.h  williotSdkJson.h
sdk/sdkSrc/: downLink.c  logger.c  mqttTopics.c  networkManager.c  sdkConfigurations.c  serviceDiscovery.c  upLink.c  williotSdkJson.c
